# TinyOS-arm64

./: .gitignore  Cargo.toml  Makefile  build.rs  linker.ld  parse_symbol.py  readme.md
.cargo/: config
firedbg/: target.json
include/: common.h  config.h  printf.h  stdtypes.h  user.h
include/arch/: arm64.h  cputypes.h  exception.h  feature.h  gic.h  macros.S  mmu.h  spinlock.h  syscalls.h  timer.h
include/arch/asm/: macros.S
include/common/: common.h  printf.h  ptable.h  stdtypes.h  string.h
include/device/: uart.h
include/mm/: address.h  frame.h  map_page.h  symbol.h
include/uart/: uart.h
src/: config.rs  linker.ld  main.c  main.rs  printf.c  user.c
src/arch/: entry.S  entry.rs  exception.c  feature.c  gic.c  macros.S  macros.rs  mmu.c  mmu.rs  mod.rs  panic.rs  psci.rs  spinlock.S  start.c  syscalls.c  timer.c  timer.rs  trap.S  trap.c
src/arch/gicv2/: mod.rs  reg.rs  types.rs
src/arch/reg/: daif.rs  mair_el1.rs  mod.rs  sctrl_el1.rs  tcr_el1.rs
src/arch/trap/: context.rs  mod.rs  syscall.rs  trap.S  trap.rs  types.rs
src/asm/: entry.S
src/common/: list.rs  mem.c  mmio.rs  mod.rs  print.rs  printf.c  ptable.c  queue.rs  string.c  symbol.rs
src/common/sync/: mod.rs  mutex.rs  (+2 more)
src/device/: uart.c
src/devices/: console.rs  macros.rs  mod.rs
src/mm/: __symbols__  address.rs  attr.rs  entry.rs  flush.rs  frame.c  heap.rs  mem.rs  mod.rs  page.rs  page_map.c  symbol.c  user.rs
src/task/: context.rs  mem.rs  mod.rs  queue.rs  scheduler.rs  task.rs  types.rs
user/: Cargo.toml  build.rs
user/src/: lib.rs  linker.ld  stdio.rs  syscall.rs
(+12 files in other folders)
